Fixed margin-collapsing

--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ div { border:dotted 1px red; }*/
 .center { width:960px; margin:0 auto; }
 
 /* sections */
-div#header { background-color: @landing_bg; color: @landing_fg;
+div#header { height: 100px; background-color: @landing_bg; color: @landing_fg;
 	img { width:300px; height:100px; }
 	ul {
 		list-style: none; float: right; margin-top: 40px;
@@ -29,9 +29,10 @@ div#header { background-color: @landing_bg; color: @landing_fg;
 	}
 }
 
-div#landing { background-color: @landing_bg; color:@landing_fg; padding:50px 0; border-bottom: solid 1px black; height: 350px;
-	div#carousel { width: 500px; height: 350px; border: solid 5px lighten(@landing_bg, 2%); .rounded(); }
-	div.form { width:350px; height: 350px; float:right;
+div#landing { background-color: @landing_bg; color:@landing_fg; border-bottom: solid 1px black; border-top:solid 1px @landing_bg; /* the border-top is to account for margin-collapsing */
+	div.center { border-top: solid 1px @landing_bg; }
+	div#carousel { width: 500px; height: 350px; margin:50px 0; border: solid 5px lighten(@landing_bg, 2%); .rounded(); }
+	div.form { width:350px; height: 350px; margin: 50px 0; float:right;
 		p { margin-top: 1em; font-style: italic; }
 		input[type=text], div#experience { width:100%; padding:8px; border: none; border-bottom: solid 1px lighten(@landing_bg, 10%); background-color: lighten(@landing_bg, 5%); color:#ccc; .rounded(); }
 		div#experience { width:auto; }
@@ -48,8 +49,8 @@ div#landing { background-color: @landing_bg; color:@landing_fg; padding:50px 0; 
 
 		p.info { font-style:normal; color:c90; text-align: center; }
 	}
-	div#form_preferences { height:inherit; display:none; }
 	div#form_resume { height:inherit; }
+	div#form_preferences { height:inherit; display:none; }
 
 }
 
